# parkings-python-backend

./: .coveragerc  .gitignore  Dockerfile  Makefile  README.md  docker-compose.dev.yml  env.example  k8s-cronjob.yaml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml  tests.yml
config/mongodb/: mongo-init.js
parking/: __init__.py  main.py  sync_parkings.py
parking/api/: __init__.py  http_server.py
parking/application/: config.py  interfaces.py  use_cases.py
parking/domain/: __init__.py  interfaces.py  models.py  services.py
parking/infrastructure/: config.py  http_parking_data_source.py  http_server.py  logging.py  mongodb_storage.py
tests/: __init__.py  test_config.py  test_domain_models.py  test_domain_services.py  test_http_server.py  test_use_cases.py
