[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "parking"
version = "0.1.0"
description = "Микросервис для работы с данными парковок Моспаркинга"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "parking"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.115.0"
uvicorn = "0.32.0"
pydantic = "2.9.2"
pydantic-settings = "2.6.0"
motor = "3.6.0"
pymongo = "^4.9"
httpx = "0.27.2"
python-multipart = "0.0.12"
structlog = "24.4.0"
python-json-logger = "2.0.7"
typer = "0.13.1"
python-dotenv = "1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "8.3.3"
pytest-asyncio = "0.24.0"
pytest-mock = "3.14.0"
black = "24.10.0"
isort = "5.13.2"
mypy = "1.13.0"
coverage = "^7.10.6"
pytest-cov = "^7.0.0"

[tool.poetry.scripts]
parking = "parking.main:main"
sync-parkings = "parking.sync_parkings:main"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
