[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "parking"
version = "0.1.0"
description = "Микросервис для работы с данными парковок Моспаркинга"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "parking"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.115.0"
uvicorn = "0.32.0"
pydantic = "2.9.2"
pydantic-settings = "2.6.0"
motor = "3.6.0"
pymongo = "^4.9"
httpx = "0.27.2"
python-multipart = "0.0.12"
structlog = "24.4.0"
python-json-logger = "2.0.7"
typer = "0.13.1"
python-dotenv = "1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "8.3.3"
pytest-asyncio = "0.24.0"
pytest-mock = "3.14.0"
black = "24.10.0"
isort = "5.13.2"
mypy = "1.13.0"
coverage = "^7.10.6"
pytest-cov = "^7.0.0"
ruff = "^0.8.0"

[tool.poetry.scripts]
parking = "parking.main:main"
sync-parkings = "parking.sync_parkings:main"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "TID", # flake8-tidy-imports
    "Q",  # flake8-quotes
    "S",  # flake8-bandit
    "N",  # pep8-naming
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "S101",  # use of assert detected
    "S104",  # possible binding to all interfaces
    "S603",  # subprocess call - check for execution of untrusted input
    "S607",  # starting a process with a partial executable path
    "S105",  # possible hardcoded password
    "S106",  # possible hardcoded password
    "S108",  # probable insecure usage of temporary file
]

[tool.ruff.lint.isort]
known-first-party = ["parking"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"
